--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="publication-links">
                   <!-- PDF Link. -->
                   <span class="link-block">
-                    <a href="https://arxiv.org/abs/2406.09246"
+                    <a href="https://aasherh.github.io/data/Hancock_Visually_Robust_VLAs.pdf"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
                         <i class="fas fa-file-pdf"></i>
@@ -88,7 +88,7 @@
             
                   <!-- Code Link. -->
                   <span class="link-block">
-                    <a href="https://github.com/openvla/openvla"
+                    <a href="https://github.com/irom-lab"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
                         <i class="fab fa-github"></i>
@@ -296,87 +296,14 @@
 
         </div>
         <br>
-
-
-        <!--
-        <div class="row justify-content-md-center"></div>
-            <div class="col-md-10 col-lg-8">
-                <p style="text-align:center;">
-                </p>
-            <h2 class="title is-3">Results</h2>
-                <p class="text-justify">
-                    We evaluate BYOVLA on Octo-Base with the task "place the carrot on yellow plate." With distractions, the performance of the nominal VLA policy significantly drops. Augmenting Octo-Base with BYOVLA allows the policy to achieve its nominal task-success rate even with distractions present. 
-                </p>
-                <p style="text-align:center;"></p>
-                    <image src="img/octo_figure_noFull.png" width="100%"></image>
-                </p>
-            </div>
-        </div>
-
-        <div class="row justify-content-md-center"></div>
-            <div class="col-md-10 col-lg-8">
-                <p style="text-align:center;">
-                </p>
-            <h2 class="title is-3">Results</h2>
-                <p class="text-justify">
-                    We also evaluate BYOVLA on OpenVLA-7b with the task "put the eggplant in the pot." Even though OpenVLA is 75x larger than Octo-Base, task-irrelevant distractions markedly degrade performance. We find that application of BYOVLA helps OpenVLA achieve its nominal task-success rate with distractions present. 
-                </p>
-                <p style="text-align:center;"></p>
-                    <image src="img/openVLA_results.png" width="100%"></image>
-                </p>
-            </div>
-        </div>
-        -->
-
-
-        <!--
-        <div class="row justify-content-md-center">
-            <div class="col-md-10 col-lg-8">
-                <h3 class="mt-4 mb-2">
-                    Citation
-                </h3>
-                <pre><code class="codeblock">
-                    @article{lidard2024blending,
-                        title={Run-time Observation Interventions
-                            Make Vision-Language-Action Models More Visually Robust
-                            },
-                        author={Hancock, Asher J., and Ren, Allen Z., and Majumdar, Anirudha}
-                        journal={arXiv preprint FILL OUT LATER},
-                        year={2024}
-                      }
-                </code></pre>
-            </div>
-        </div>
-         -->
-
-            <div class="container is-max-desktop content">
-              <h2 class="title">BibTeX</h2>
-              <pre><code>
-                @article{lidard2024blending,
-                    title={Run-time Observation Interventions
-                        Make Vision-Language-Action Models More Visually Robust
-                        },
-                    author={Hancock, Asher J., and Ren, Allen Z., and Majumdar, Anirudha}
-                    journal={arXiv preprint FILL OUT LATER},
-                    year={2024}
-                  }
-        </code></pre>
-            </div>
-
-        <div class="row justify-content-md-center">
-            <div class="col-md-2 text-center">
-                <a href="https://aasherh.github.io/data/Hancock_Visually_Robust_VLAs.pdf">
-                    <image src="img/paper.png" height="55px" width="43px"></image>
-                <h4><strong>Paper</strong></h4>
-                </a>
-            </div>
-            <!-- TODO -->
-            <div class="col-md-2 text-center">
-                <a href="https://github.com/irom-lab">
-                <image src="img/github.png"  height="55px"></image>
-                <h4><strong>Code</strong></h4>
-                </a>
-            </div>
+        <div class="container is-max-desktop content">
+            <h2 class="title">BibTeX</h2>
+            <pre><code>@article{hancock2024byovla,
+                                title={Run-time Observation Interventions Make Vision-Language-Action Models More Visually Robust},
+                                author={Hancock, Asher J., and Ren, Allen Z., and Majumdar, Anirudha}
+                                journal={arXiv preprint FILL OUT LATER},
+                                year={2024},}
+            </code></pre>
         </div>
 
     </div>
