--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
 
         </div>
         <br>
+        <!--
         <div class="container is-max-desktop content">
             <h2 class="title">BibTeX</h2>
             <pre><code>@article{hancock2024byovla,
@@ -305,6 +306,16 @@
                                 year={2024},}
             </code></pre>
         </div>
+        -->
+        <div class="container is-max-desktop content">
+            <h2 class="title">BibTeX</h2>
+            <pre><code>@article{kim24openvla,
+      title={OpenVLA: An Open-Source Vision-Language-Action Model},
+      author={{Moo Jin} Kim and Karl Pertsch and Siddharth Karamcheti and Ted Xiao and Ashwin Balakrishna and Suraj Nair and Rafael Rafailov and Ethan Foster and Grace Lam and Pannag Sanketi and Quan Vuong and Thomas Kollar and Benjamin Burchfiel and Russ Tedrake and Dorsa Sadigh and Sergey Levine and Percy Liang and Chelsea Finn},
+      journal = {arXiv preprint arXiv:2406.09246},
+      year={2024},
+  } </code></pre>
+          </div>
 
     </div>
 </body>
