--- a/index.html
+++ b/index.html
@@ -309,10 +309,10 @@
         -->
         <div class="container is-max-desktop content">
             <h2 class="title">BibTeX</h2>
-            <pre><code>@article{kim24openvla,
-      title={OpenVLA: An Open-Source Vision-Language-Action Model},
-      author={{Moo Jin} Kim and Karl Pertsch and Siddharth Karamcheti and Ted Xiao and Ashwin Balakrishna and Suraj Nair and Rafael Rafailov and Ethan Foster and Grace Lam and Pannag Sanketi and Quan Vuong and Thomas Kollar and Benjamin Burchfiel and Russ Tedrake and Dorsa Sadigh and Sergey Levine and Percy Liang and Chelsea Finn},
-      journal = {arXiv preprint arXiv:2406.09246},
+            <pre><code>@article{hancock24byovla,
+      title={Run-time Observation Interventions Make Vision-Language-Action Models More Visually Robust},
+      author={Hancock, Asher J., and Ren, Allen Z., and Majumdar, Anirudha},
+      journal = {fill out later},
       year={2024},
   } </code></pre>
           </div>
