--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </p>
                 <!--<h2 class="title is-3">TLDR</h2>-->
                 <p class="text-justify">
-                    We introduce Bring Your Own VLA (BYOVLA): a run-time intervention scheme for vision-language-action (VLA) models 
+                    We introduce <b>Bring Your Own VLA (BYOVLA)</b>: a run-time intervention scheme for vision-language-action (VLA) models 
                     that improves baseline performance in the presence of task-irrelevant distractor objects and backgrounds without finetuning or access to the model's weights. </br> 
                 </p>
             </div>
