--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             </p>
             <h2 class="title is-3">Results</h2>
                 <p class="text-justify">
-                    We evaluate BYOVLA on Octo-Base with the task "place the carrot on yellow plate." With distractions, the performance of the nominal VLA policy significantly drops. Augmenting Octo-Base with BYOVLA allows the policy to (nearly) achieve its nominal task-success rate even with distractions present. 
+                    We evaluate BYOVLA on Octo-Base with the task "place the carrot on yellow plate." With distractions, the performance of the nominal VLA policy significantly drops. Augmenting Octo-Base with <b>BYOVLA allows the policy to (nearly) achieve its nominal task-success rate </b> with distractions present. 
                 </p>
             <!--</div>-->
             <br>
