--- a/index.html
+++ b/index.html
@@ -307,6 +307,10 @@
             </code></pre>
         </div>
         -->
+        <div class="row justify-content-md-center">
+            <div class="col-md-10 col-lg-8">
+            <p style="text-align:center;">
+            </p>
         <div class="container is-max-desktop content">
             <h2 class="title">BibTeX</h2>
             <pre><code>@article{hancock24byovla,
@@ -315,6 +319,8 @@
       journal = {fill out later},
       year={2024},
   } </code></pre>
+          </div>
+          </div>
           </div>
 
     </div>
