--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
             </p>
             <h2 class="title is-3">Experiments</h2>
                 <p class="text-justify">
-                    We demonstrate BYOVLA on two popular open-source VLA models, Octo-Base and OpenVLA-7b. <b>BYOVLA enables greater task-success rates when task-irrelvant distractions are present.</b><br>
+                    We demonstrate BYOVLA on two popular open-source VLA models, Octo-Base and OpenVLA-7b. <b>BYOVLA enables greater task-success rates when task-irrelvant distractions are present.</b> All videos are 10x speed.<br>
                 </p>
             </div>
         </div>
         <br>
 
-        <div class='myscope'>
+        <!--<div class='myscope'>-->
             <section class="hero is-light is-small">
               <div class="hero-body">
                 <div class="container">
@@ -267,7 +267,7 @@
                 </div>
               </div>
             </section>
-        </div>
+        <!--</div>-->
         <br>
 
         <div class="row justify-content-md-center">
