--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         </div>
         <br>
 
-        <!--<div class='myscope'>-->
+        <div class='myscope'>
             <section class="hero is-light is-small">
               <div class="hero-body">
                 <div class="container">
@@ -267,7 +267,7 @@
                 </div>
               </div>
             </section>
-        <!--</div>-->
+        </div>
         <br>
 
         <div class="row justify-content-md-center">
