--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <section class="hero is-light is-small">
               <div class="hero-body">
                 <div class="container">
-                  <div id="results-carousel" class="carousel results-carousel">
+                  <div id="results-carousel" class="carousel results-carousel" data-interval="10000">
                     <div class="item-1">
                       <video poster="" id="1" autoplay controls muted loop playsinline height="100%">
                           <source src="videos/baseline_success_10x.mp4" type="video/mp4">
