--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.6.0/highlight.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.8.0/codemirror.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.3/clipboard.min.js"></script>
+
     <script src="js/bulma-carousel.min.js"></script>
     <script src="js/bulma-slider.min.js"></script>
     <script defer src="js/fontawesome.all.min.js"></script>
@@ -184,7 +185,7 @@
             <section class="hero is-light is-small">
               <div class="hero-body">
                 <div class="container">
-                  <div id="results-carousel" class="carousel results-carousel" data-interval="10000">
+                  <div id="results-carousel" class="carousel results-carousel">
                     <div class="item-1">
                       <video poster="" id="1" autoplay controls muted loop playsinline height="100%">
                           <source src="videos/baseline_success_10x.mp4" type="video/mp4">
