--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <div class="container">
                   <div id="results-carousel" class="carousel results-carousel">
                     <div class="item-1">
-                      <video poster="" id="1" autoplay controls muted loop playsinline height="100%">
+                      <video poster="" id="1" controls muted loop playsinline height="100%">
                           <source src="videos/baseline_success_10x.mp4" type="video/mp4">
                       </video>
                       <div class="video-overlay">
@@ -200,7 +200,7 @@
                       </div>
                     </div>
                     <div class="item-2">
-                        <video poster="" id="2" autoplay controls muted loop playsinline height="100%">
+                        <video poster="" id="2" controls muted loop playsinline height="100%">
                             <source src="videos/octo_base_10x.mp4" type="video/mp4">
                         </video>
                         <div class="video-overlay">
@@ -213,7 +213,7 @@
                         </div>
                     </div>
                     <div class="item-3">
-                        <video poster="" id="3" autoplay controls muted loop playsinline height="100%">
+                        <video poster="" id="3" controls muted loop playsinline height="100%">
                             <source src="videos/byovla_success_10x.mp4" type="video/mp4">
                         </video>
                         <div class="video-overlay">
@@ -226,7 +226,7 @@
                         </div>
                     </div>
                     <div class="item-4">
-                        <video poster="" id="4" autoplay controls muted loop playsinline height="100%">
+                        <video poster="" id="4" controls muted loop playsinline height="100%">
                             <source src="videos/openVLA_baseline_success_10x.mp4" type="video/mp4">
                         </video>
                         <div class="video-overlay">
@@ -239,7 +239,7 @@
                         </div>
                       </div>
                       <div class="item-5">
-                          <video poster="" id="5" autoplay controls muted loop playsinline height="100%">
+                          <video poster="" id="5" controls muted loop playsinline height="100%">
                               <source src="videos/openVLA_failure_10x.mp4" type="video/mp4">
                           </video>
                           <div class="video-overlay">
@@ -252,7 +252,7 @@
                           </div>
                       </div>
                       <div class="item-6">
-                          <video poster="" id="6" autoplay controls muted loop playsinline height="100%">
+                          <video poster="" id="6" controls muted loop playsinline height="100%">
                               <source src="videos/openVLA_success_10X.mp4" type="video/mp4">
                           </video>
                           <div class="video-overlay">
