updated arXiv link

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="publication-links">
                   <!-- PDF Link. -->
                   <span class="link-block">
-                    <a href="https://aasherh.github.io/data/Hancock_Visually_Robust_VLAs.pdf"
+                    <a href="https://arxiv.org/abs/2410.01971"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
                         <i class="fas fa-file-pdf"></i>
@@ -308,6 +308,9 @@
             </code></pre>
         </div>
         -->
+
+    <!---->
+        <!--
         <div class="row justify-content-md-center">
             <div class="col-md-10 col-lg-8">
             <p style="text-align:center;">
@@ -322,7 +325,7 @@
   } </code></pre>
           </div>
           </div>
-          </div>
+          </div>-->
 
     </div>
 </body>
