updated youtube link

--- a/index.html
+++ b/index.html
@@ -98,16 +98,16 @@
                     </a>
                   </span>
                   
-                  <!-- CoLab Link. -->
-                  <!-- <span class="link-block">
-                    <a href="https://colab.research.google.com/github/openvla/openvla/blob/main/examples/openvla.ipynb"
+                  <!-- YouTube Link. -->
+                  <span class="link-block">
+                    <a href="https://youtu.be/9PXC1tnD91g"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
-                        <img src="static/images/colab_icon.png" />
+                        <i class="fab fa-youtube"></i>
                       </span>
-                      <span>Let's try it!</span>
+                      <span>Video</span>
                     </a>
-                  </span> -->
+                  </span>
   
                 </div>
   
