--- a/index.html
+++ b/index.html
@@ -310,7 +310,6 @@
         -->
 
     <!---->
-        <!--
         <div class="row justify-content-md-center">
             <div class="col-md-10 col-lg-8">
             <p style="text-align:center;">
@@ -320,12 +319,12 @@
             <pre><code>@article{hancock24byovla,
       title={Run-time Observation Interventions Make Vision-Language-Action Models More Visually Robust},
       author={Hancock, Asher J., and Ren, Allen Z., and Majumdar, Anirudha},
-      journal = {fill out later},
+      journal = {arXiv preprint arXiv:2410.01971},
       year={2024},
   } </code></pre>
           </div>
           </div>
-          </div>-->
+          </div>
 
     </div>
 </body>
