--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                             <p>
                               Task: "place the carrot on yellow plate"<br>
                               Scenario: background distractors <br>
-                              Policy: Octo-Base <b>with BYOVLA</b>
+                              Policy: Octo-Base
                             </p>
                             <p style="color: red">Failure</p>
                         </div>
